# building-blocks

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md
crates/building_blocks_core/: Cargo.toml
crates/building_blocks_core/src/: axis.rs  crate_doc.md  extent.rs  extent2.rs  extent3.rs  int_math.rs  lib.rs  morton.rs  octant.rs  orthant.rs  point.rs  point2.rs  point3.rs  point_traits.rs  sphere.rs
crates/building_blocks_core/src/extent/: extent2.rs  extent3.rs
crates/building_blocks_core/src/point/: cgmath_conversions.rs  glam_conversions.rs  mint_conversions.rs  nalgebra_conversions.rs  point2.rs  point3.rs  point_traits.rs  sdfu_integration.rs  vox_format_conversions.rs
crates/building_blocks_image/: Cargo.toml
crates/building_blocks_image/src/: lib.rs
crates/building_blocks_mesh/: Cargo.toml
crates/building_blocks_mesh/benches/: contour_adf.rs  greedy_quads.rs  height_map.rs  surface_nets.rs
crates/building_blocks_mesh/src/: contour_adf.rs  crate_doc.md  greedy_quads.rs  height_map.rs  lib.rs  quad.rs  surface_nets.rs
crates/building_blocks_partition/: Cargo.toml
crates/building_blocks_partition/benches/: octree.rs
crates/building_blocks_partition/src/: collision.rs  lib.rs  octree.rs  octree_dbvt.rs
crates/building_blocks_procgen/: Cargo.toml
crates/building_blocks_procgen/src/: lib.rs  signed_distance_fields.rs
crates/building_blocks_search/: Cargo.toml
crates/building_blocks_search/benches/: find_surface.rs  flood_fill.rs
crates/building_blocks_search/src/: collision.rs  find_surface.rs  flood_fill.rs  grid_ray_traversal.rs  grid_traversal.rs  lib.rs  octree_dbvt.rs  pathfinding.rs  surface.rs
crates/building_blocks_search/src/collision/: ball.rs  ray.rs
crates/building_blocks_storage/: Cargo.toml
crates/building_blocks_storage/benches/: accessors.rs  adaptive_distance_field.rs  chunk_clip_map.rs  compression.rs  database.rs  octree.rs  octree_set.rs  sampling.rs
crates/building_blocks_storage/src/: access.rs  access_traits.rs  adaptive_distance_field.rs  array.rs  array2.rs  array3.rs  bitset.rs  caching.rs  chunk.rs  chunk_clip_map.rs  chunk_indexer.rs  chunk_map.rs  chunk_pyramid.rs  chunk_serialization.rs  chunk_storage.rs  chunk_tree.rs  chunked_octree_set.rs  compression.rs  crate_doc.md  database.rs  dot_vox_conversions.rs  func.rs  image_conversions.rs  lib.rs  multi_ptr.rs  multiresolution.rs  octree.rs  octree_chunk_index.rs  octree_set.rs  raw_bytes.rs  sampling.rs  signed_distance.rs  test_utilities.rs  transform_map.rs  tuple.rs  tuple_ptr.rs  vox_format.rs  vox_format_conversions.rs
crates/building_blocks_storage/src/array/: array2.rs  array3.rs  channel.rs  channels.rs  compression.rs  coords.rs  dot_vox_conversions.rs  for_each.rs  for_each3.rs  image_conversions.rs  indexer.rs  indexer2.rs  indexer3.rs  lz4.rs  mod.rs  snappy.rs
crates/building_blocks_storage/src/array/channels/: channel.rs  compression.rs  multichannel.rs
crates/building_blocks_storage/src/array/for_each/: for_each2.rs  for_each3.rs  lock_step.rs  single_array.rs  stride_iter.rs  stride_iter2.rs  stride_iter3.rs
crates/building_blocks_storage/src/caching/: local_cache.rs  lru_cache.rs
crates/building_blocks_storage/src/chunk/: compression.rs  indexer.rs  map.rs  serialization.rs  storage.rs  tree.rs
crates/building_blocks_storage/src/chunk/map/: builder.rs  clipmap.rs  lod_view.rs  sampling.rs
crates/building_blocks_storage/src/chunk/storage/: compressible.rs  compressible_reader.rs  hash_map.rs
crates/building_blocks_storage/src/chunk/tree/: builder.rs  clipmap.rs  lod_view.rs  sampling.rs  storage.rs
crates/building_blocks_storage/src/chunk_map/: ambient.rs  chunk.rs  reader.rs  storage.rs
crates/building_blocks_storage/src/chunk_map/storage/: compressible.rs  compressible_reader.rs  compression.rs  hash_map.rs  serialization.rs
crates/building_blocks_storage/src/chunk_storage/: compressible.rs  compressible_reader.rs  hash_map.rs
crates/building_blocks_storage/src/chunk_tree/: bits.rs  builder.rs  clipmap.rs  indexer.rs  lod_view.rs  sampling.rs  storage.rs
crates/building_blocks_storage/src/chunk_tree/sampling/: point.rs  sdf_mean.rs
crates/building_blocks_storage/src/chunk_tree/storage/: compressible.rs  hash_map.rs
crates/building_blocks_storage/src/compression/: compressed_bincode.rs  lz4_compression.rs  snappy_compression.rs
crates/building_blocks_storage/src/database/: chunk_db.rs  delta_batch.rs  key.rs  read_result.rs  readable.rs  versioned_chunk_db.rs
crates/building_blocks_storage/src/multiresolution/: chunk_pyramid.rs  clipmap.rs  sampling.rs
crates/building_blocks_storage/src/octree/: chunk_index.rs  chunked_set.rs  clipmap.rs  set.rs
crates/building_blocks_vox/: Cargo.toml
crates/building_blocks_vox/src/: lib.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: bevy_util.rs  data_sets.rs  lib.rs  noise.rs  test.rs
crates/utilities/src/bevy_util/: camera.rs  thread_local_resource.rs
examples/: Cargo.toml  README.md
examples/array_texture_materials/: array_texture_materials.rs  camera_rotation.rs
examples/assets/: test_single_model_default_palette.vox
examples/bevy_array_texture/: bevy_array_texture.rs
examples/bevy_meshing/: bevy_meshing.rs  camera_rotation.rs  mesh_generator.rs
examples/bevy_minimal/: bevy_minimal.rs
examples/bevy_utilities/: Cargo.toml
examples/bevy_utilities/src/: lib.rs  mesh.rs  noise.rs  thread_local_resource.rs
examples/blocky_ambient_occlusion/: ambient_occlusion.frag  ambient_occlusion.vert  blocky_ambient_occlusion.rs
examples/lod_terrain/: blocky_voxel_map.rs  camera.rs  chunk_compressor.rs  chunk_generator.rs  clip_spheres.rs  frame_budget.rs  level_of_detail.rs  lod_terrain.rs  map.ron  mesh_generator.rs  new_chunk_detector.rs  new_slot_detector.rs  smooth_voxel_map.rs  sync_batch.rs  voxel_map.rs  voxel_mesh.rs
examples/mesh_showcase/: camera_rotation.rs  mesh_generator.rs  mesh_showcase.rs
examples/quad_mesh_uvs/: camera_rotation.rs  quad_mesh_uvs.rs
examples/sdf_mesh/: sdf_mesh.rs
(+10 files in other folders)
