[package]
name = "building-blocks"
version = "0.6.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
description = "Data types, collections, and algorithms for working with maps on 2D and 3D integer lattices. Commonly known as voxel data."
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

[package.metadata.docs.rs]
features = ["dot_vox", "glam", "image", "lz4", "mesh", "mint", "nalgebra", "ncollide", "search"]

[features]
# All features (except "snappy") are default because we want them to be easily discoverable on docs.rs. You can define your own
# list of features by disabling the defaults with "default-features = false".
#
# "snappy" is excluded because there are useful type aliases that rely on the compression backends being mutually exclusive.
default = ["dot_vox", "glam", "image", "lz4", "mesh", "mint", "nalgebra", "ncollide", "sdfu", "search"]

# Optional crates.
mesh = ["building_blocks_mesh"]
search = ["building_blocks_search"]

# Integrations.
dot_vox = ["building_blocks_storage/dot_vox"]
image = ["building_blocks_storage/image"]
sdfu = ["building_blocks_core/sdfu"]

# Math type conversions.
glam = ["building_blocks_core/glam"]
mint = ["building_blocks_core/mint"]
nalgebra = ["building_blocks_core/nalgebra"]

# Compression backends.
lz4 = ["building_blocks_storage/lz4"]
snappy = ["building_blocks_storage/snap"]

# Collisions with `OctreeSet` and `OctreeDBVT`.
ncollide = ["building_blocks_search/ncollide"]

[workspace]
members = ["crates/*"]
exclude = ["benches"]

[profile.dev]
opt-level = 2

[profile.release]
lto = true

[profile.bench]
lto = true

# TODO: use RFC #2906 to deduplicate dependency specs once it is merged

[dependencies]
building_blocks_core = { path = "crates/building_blocks_core", version = "0.6.0", default-features = false }
building_blocks_storage = { path = "crates/building_blocks_storage", version = "0.6.0", default-features = false }

# Optional, feature-gated
building_blocks_mesh = { path = "crates/building_blocks_mesh", version = "0.6.0", default-features = false, optional = true }
building_blocks_search = { path = "crates/building_blocks_search", version = "0.6.0", default-features = false, optional = true }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "9c252e904a92067", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "png", "x11"] }
simdnoise = "3.1"

# Common code for tests and examples.
utilities = { path = "crates/utilities" }

[[bin]]
name = "measure_compression_rate"
path = "src/bin/measure_compression_rate.rs"
required-features = ["dot_vox", "lz4", "snappy"]

[[example]]
name = "mesh_showcase"
path = "examples/mesh_showcase/mesh_showcase.rs"
required-features = ["mesh", "sdfu"]

[[example]]
name = "sdf_mesh"
path = "examples/sdf_mesh/sdf_mesh.rs"
required-features = ["mesh", "sdfu"]

[[example]]
name = "quad_mesh_uvs"
path = "examples/quad_mesh_uvs/quad_mesh_uvs.rs"
required-features = ["mesh"]

[[example]]
name = "array_texture_materials"
path = "examples/array_texture_materials/array_texture_materials.rs"
required-features = ["mesh"]

[[example]]
name = "lod_terrain"
path = "examples/lod_terrain/lod_terrain.rs"
required-features = ["glam", "mesh"]
