[package]
name = "building-blocks"
version = "0.7.1"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
description = "Data types, collections, and algorithms for working with maps on 2D and 3D integer lattices. Commonly known as voxel data."
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

[package.metadata.docs.rs]
all-features = true

[profile]
dev = { opt-level = 2 }
release = { lto = "thin" }
bench = { lto = "thin" }

[features]
default = ["lz4", "mesh", "sdfu", "search"]

# Optional crates.
mesh = ["building_blocks_mesh"]
search = ["building_blocks_search"]

# Integrations.
dot_vox = ["building_blocks_storage/dot_vox"]
image = ["building_blocks_storage/image"]
sdfu = ["building_blocks_core/sdfu"]

# Math type conversions.
glam = ["building_blocks_core/glam"]
mint = ["building_blocks_core/mint"]
nalgebra = ["building_blocks_core/nalgebra"]

# Compression backends.
lz4 = ["building_blocks_storage/lz4"]
snappy = ["building_blocks_storage/snap"]

# Collisions with `OctreeSet` and `OctreeDBVT`.
ncollide = ["building_blocks_search/ncollide"]

[workspace]
members = ["crates/*"]
exclude = ["benches", "examples"]

# TODO: use RFC #2906 to deduplicate dependency specs once it is merged

[dependencies]
building_blocks_core = { path = "crates/building_blocks_core", version = "0.7.1", default-features = false }
building_blocks_storage = { path = "crates/building_blocks_storage", version = "0.7.1", default-features = false }

# Optional, feature-gated
building_blocks_mesh = { path = "crates/building_blocks_mesh", version = "0.7.1", default-features = false, optional = true }
building_blocks_search = { path = "crates/building_blocks_search", version = "0.7.1", default-features = false, optional = true }

[dev-dependencies]
utilities = { path = "crates/utilities" }

[[bin]]
name = "measure_compression_rate"
path = "src/bin/measure_compression_rate.rs"
required-features = ["dot_vox", "lz4", "snappy"]
