[package]
name = "building_blocks_core"
version = "0.3.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "The core data types for defining 2D and 3D integer lattices."

[features]
default = []

[dependencies]
itertools = "0.9"
num = "0.3"
serde = { version = "1.0", features = ["derive"] }

# Optional, feature-gated.
glam = { version = "0.11", optional = true }
mint = { version = "0.5", optional = true }
nalgebra = { version = "0.23", optional = true }
