[package]
name = "building_blocks_core"
version = "0.5.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "The core data types for defining 2D and 3D integer lattices."

[features]
default = ["glam", "mint", "nalgebra"]

[dependencies]
itertools = "0.9"
num = "0.3"
serde = { version = "1.0", features = ["derive"] }

# Optional, feature-gated.
glam = { version = "0.12", optional = true }
mint = { version = "0.5.0", optional = true }
nalgebra = { version = "0.24", optional = true }
sdfu = { version = "0.3", optional = true }
