[package]
name = "building_blocks_image"
version = "0.2.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "Functions for converting from/to building-blocks arrays to/from 2D pixel images."

[dependencies]
image = { version = "0.23" }

building_blocks_core = { path = "../building_blocks_core", version = "0.2.1" }
building_blocks_storage = { path = "../building_blocks_storage", version = "0.2.1" }
