[package]
name = "building_blocks_mesh"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[dependencies]
building_blocks_core = { path = "../building_blocks_core", version = "0.1" }
building_blocks_storage = { path = "../building_blocks_storage", version = "0.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "surface_nets"
harness = false

[[bench]]
name = "height_map"
harness = false
