[package]
name = "building_blocks_mesh"
version = "0.4.3"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "Fast meshing algorithms for voxel data structures."

[dependencies]
building_blocks_core = { path = "../building_blocks_core", version = "0.4.3", default-features = false }
building_blocks_storage = { path = "../building_blocks_storage", version = "0.4.3", default-features = false }

fnv = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "surface_nets"
harness = false

[[bench]]
name = "height_map"
harness = false

[[bench]]
name = "greedy_quads"
harness = false
