[package]
name = "building_blocks_partition"
version = "0.2.0"
edition = "2018"
authors = ["Duncan Fairbanks <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "Acceleration structures for spatial queries on voxel data."

[features]
default = []

ncollide = ["ncollide3d", "building_blocks_core/nalgebra"]

[dependencies]
fnv = "1.0"

# Optional, feature-gated
ncollide3d = { version = "0.26", optional = true }

building_blocks_core = { path = "../building_blocks_core", version = "0.2" }
building_blocks_storage = { path = "../building_blocks_storage", version = "0.2" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "octree"
harness = false
