[package]
name = "building_blocks_procgen"
version = "0.2.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "Algorithms for procedural generation of voxel data."

[dependencies]
building_blocks_core = { path = "../building_blocks_core", version = "0.2" }
