[package]
name = "building_blocks_search"
version = "0.6.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

description = "Search algorithms for voxel data."

[features]
default = ["ncollide"]

ncollide = ["nalgebra", "ncollide3d", "building_blocks_core/nalgebra"]

[dependencies]
indexmap = "1.5"
itertools = "0.9"
pathfinding = "2.1"

# Optional, feature-gated
nalgebra = { version = "0.26", optional = true }
ncollide3d = { version = "0.29", optional = true }

building_blocks_core = { path = "../building_blocks_core", version = "0.6.0", default-features = false }
building_blocks_storage = { path = "../building_blocks_storage", version = "0.6.0", default-features = false }

[dev-dependencies]
criterion = "0.3"
# Common code for tests and examples.
utilities = { path = "../utilities" }

[[bench]]
name = "find_surface"
harness = false

[[bench]]
name = "flood_fill"
harness = false
