[package]
name = "building_blocks_storage"
version = "0.6.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel", "mesh"]

description = "Efficient storage for maps on sparse or dense, 2D and 3D integer lattices."

[features]
default = ["lz4"]

[dependencies]
ahash = { version = "0.7", features = ["serde"] }
auto_impl = "0.4"
bincode = "1.3"
either = "1.6"
futures = "0.3"
itertools = "0.9"
num = "0.3"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"

building_blocks_core = { path = "../building_blocks_core", version = "0.6.0", default-features = false }

# Optional, feature-gated.
dot_vox = { version = "4.1", optional = true }
image = { version = "0.23", optional = true }
lz4 = { version = "1.23", optional = true }
snap = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
# Common code for tests and examples.
utilities = { path = "../utilities" }

[[bench]]
name = "accessors"
harness = false

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "octree_set"
harness = false
