[package]
name = "building_blocks_storage"
version = "0.7.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel", "mesh"]

description = "Efficient storage for maps on sparse or dense, 2D and 3D integer lattices."

[package.metadata.docs.rs]
all-features = true

[dependencies]
ahash = { version = "0.7", features = ["serde"] }
auto_impl = "0.4"
bincode = "1.3"
bytemuck = "1.7"
either = "1.6"
futures = "0.3"
itertools = "0.10"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"

building_blocks_core = { path = "../building_blocks_core", version = "0.7.0", default-features = false }

# Optional, feature-gated.
dot_vox = { version = "4.1", optional = true }
image = { version = "0.23", optional = true }
lz4 = { version = "1.23", optional = true }
sled = { git = "https://github.com/spacejam/sled", rev = "a0d51f2", optional = true }
snap = { version = "1.0", optional = true }
vox-format = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.7"
rand = "0.8"
tempdir = "0.3"

# Common code for tests and examples.
utilities = { path = "../utilities" }

[[bench]]
name = "accessors"
harness = false

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "octree_set"
harness = false
