[package]
name = "building_blocks_vox"
version = "0.1.0"
edition = "2018"
authors = ["Duncan <bonsairobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/bonsairobo/building-blocks"
keywords = ["voxel"]

[dependencies]
dot_vox = "4.1"

building_blocks_core = { path = "../building_blocks_core", version = "0.1" }
building_blocks_storage = { path = "../building_blocks_storage", version = "0.1" }
