[package]
name = "utilities"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[dependencies]
building_blocks_core = { path = "../../crates/building_blocks_core", default-features = false }
building_blocks_storage = { path = "../../crates/building_blocks_storage", default-features = false }

# Only needed for examples.
simdnoise = { version = "3.1", optional = true }
